--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,1 +1,43 @@
-<p>cart-page works!</p>
+<app-title title="Carrito" margin="1.5rem 0 0 2.5rem"></app-title>
+
+<div class="container">
+    <ul>
+        <li *ngFor="let cartItem of cart.items">
+            <div>
+                <img [src]="cartItem.producto.imageUrl" [alt]="cartItem.producto.name">
+            </div>
+            <div>
+                <a routerLink="/productos/{{cartItem.producto.id}}">
+                    {{cartItem.producto.name}} 
+                </a>
+            </div>
+            <div>
+                <select #quantitySelect
+                [value]="cartItem.quantity"
+                (change)="changeQuantity(cartItem, quantitySelect.value)">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            </div>
+            <div>
+                {{cartItem.price | currency}}
+            </div>
+
+            <div>
+                <button class="remove-button" (click)="removeFromCart(cartItem)">
+                    Eliminar
+                </button>
+            </div>
+        </li>
+    </ul>
+    <div class="checkout">
+        <div>
+            <div class="Total de producto">{{cart.totalCount}}</div>
+            <div class="Precio total">{{cart.totalPrice|currency}}</div>
+        </div>
+        <a routerLink="/checkout">Proceder a pagar</a>
+    </div>
+</div>
