--- a/frontend/src/app/components/pages/productos-page/productos-page.component.html
+++ b/frontend/src/app/components/pages/productos-page/productos-page.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="producto" class="container">
     <img [src]="producto.imageUrl" [alt]="producto.name"/>
 
     <div clas="details">
