--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -4,11 +4,15 @@
         <nav>
             <ul>
                 <li>
-                    <a routerLink="/login">Iniciar Sesión</a>
+                    <a routerLink="/contact">Crea tu Empastado</a>
                 </li>
                 <li>
                     <a routerLink="/contact">Contacto</a>
                 </li>
+                <li>
+                    <a routerLink="/login">Iniciar Sesión</a>
+                </li>
+                
                 <li class ="menu-container">
                     <a routerLink="/dashboard">Humberto</a>
                     <div class ="menu">
