--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -1,33 +1,26 @@
 <div class="container">
     <div class="details">
-        <app-title title="Login"></app-title>
+        <app-title title="Iniciar Sesión"></app-title>
         <form [formGroup]="loginForm" (ngSubmit)="submit()">
-            <div class="input-container">
-                <label>Email</label>
-                <div>
-                    <input type ="email" placeholder="Email" formControlName="email">
+            
+            
 
-                </div>
-                <div class ="error-list" *ngIf="fc['email'].errors && isSubmitted">
-                    <div *ngIf="fc['email'].errors['required']">No debe estar vacío</div>
-                    <div *ngIf="fc['email'].errors['email']">El correo es incorrecto</div>
-
-                </div>
-            </div>
-            <div class="input-container">
-                <label>Contraseña</label>
-                <div>
-                    <input type ="password" placeholder="Contraseña" formControlName="password">
-                    
-                </div>
-                <div class ="error-list" *ngIf="fc['password'].errors && isSubmitted">
-                    <div *ngIf="fc['password'].errors['required']">No debe estar vacío</div>
-
-                </div>
-            </div>
-            <div class= "button">
-                <button type="submit">Login</button>
-            </div>
+            <text-input
+            [control]="fc['email']"
+            [showErrorsWhen]="isSubmitted"
+            type="email"
+            label="Correo Electrónico"
+            ></text-input>
+            <text-input
+            [control]="fc['password']"
+            [showErrorsWhen]="isSubmitted"
+            type="password"
+            label="Contraseña"
+            ></text-input>
+            
+            
+           
+            <default-button text="Iniciar Sesión"></default-button>
         </form>
     </div>
 </div>
