Registro - Existe Error con Token

--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -21,6 +21,12 @@
             
            
             <default-button text="Iniciar Sesión"></default-button>
+            <div class="register">
+                ¿Nuevo usuario? &nbsp;
+                <a routerLink="/register" [queryParams]="{returnUrl : returnUrl}">
+                  Registrate acá
+                </a>
+              </div>
         </form>
     </div>
 </div>
