Mapa para la orden agregado

--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
@@ -9,6 +9,7 @@
     </div>
     <div class="map">
         <app-title title="Escoge tu dirección en el mapa" fontSize="1.6rem"></app-title>
+        <map [order]="order"></map>
     </div>
     <div class="buttons-container">
         <div class ="buttons">
