--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -10,7 +10,7 @@
             <div class="product-item-footer">
                 <div class="price">
                     <span>
-                        {{producto.price | currency}}
+                        {{producto.price | currency:'Q'}}
                     </span>
                 </div>
             </div>
