--- a/frontend/src/app/components/pages/productos-page/productos-page.component.html
+++ b/frontend/src/app/components/pages/productos-page/productos-page.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class ="price">
             <span>
-                {{producto.price | currency}}
+                {{producto.price | currency:'Q'}}
             </span>
         </div>
 
