--- a/frontend/src/app/components/pages/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/pages/payment-page/payment-page.component.html
@@ -3,11 +3,11 @@
       <app-title title="Generación de orden" fontSize="1.6rem"></app-title>
       <div class="summary">
         <div>
-          <h3>Name:</h3>
+          <h3>Nombre:</h3>
           <span>{{order.name}}</span>
         </div>
         <div>
-          <h3>Address:</h3>
+          <h3>Dirección:</h3>
           <span>{{order.address}}</span>
         </div>
       </div>
