--- a/frontend/src/app/components/pages/order-track-page/order-track-page.component.html
+++ b/frontend/src/app/components/pages/order-track-page/order-track-page.component.html
@@ -2,12 +2,12 @@
     <div class="content" *ngIf="order">
       <h1>Order #{{order.id}}</h1>
       <div class="details">
-        <div><strong>Date</strong> {{order.createdAt | date:'medium'}}</div>
-        <div><strong>Name</strong> {{order.name}}</div>
-        <div><strong>Address</strong> {{order.address}}</div>
-        <div><strong>Status</strong> {{order.status}}</div>
+        <div><strong>Fecha</strong> {{order.createdAt | date:'medium'}}</div>
+        <div><strong>Nombre</strong> {{order.name}}</div>
+        <div><strong>Dirección</strong> {{order.address}}</div>
+        <div><strong>Estado</strong> {{order.status}}</div>
         <div *ngIf="order.paymentId">
-          <strong>Payment ID</strong> {{order.paymentId}}
+          <strong>ID de pago</strong> {{order.paymentId}}
         </div>
       </div>
   
