Vista Administrador Terminada

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -13,6 +13,9 @@
                 <li *ngIf="!isAuth">
                     <a routerLink="/login">Iniciar Sesión</a>
                 </li>
+                <li *ngIf="isAdmin()">
+                    <a routerLink="/admin-page">Admin</a>
+                </li>
                 <!-- *ngIf="isAuth" -->
                 <li *ngIf="isAuth"  class ="menu-container">
                     <a routerLink="/dashboard">{{user.name}}</a>
