--- a/frontend/src/app/components/pages/empastados-page/empastados-page.component.html
+++ b/frontend/src/app/components/pages/empastados-page/empastados-page.component.html
@@ -1,1 +1,2 @@
-<iframe src="https://clara.io/embed/fd55ce5e-34a3-4640-b782-0eb85f4b6e21?renderer=webgl" width="800" height="600" allowfullscreen></iframe>
+<app-three-renderer></app-three-renderer>
+<div #container></div>
