Empastados al carrito

--- a/frontend/src/app/components/pages/empastados-page/empastados-page.component.html
+++ b/frontend/src/app/components/pages/empastados-page/empastados-page.component.html
@@ -1,2 +1,4 @@
-<app-three-renderer></app-three-renderer>
+<div class="app-three-renderer-container">
+    <app-three-renderer></app-three-renderer>
+  </div>
 <div #container></div>
