--- a/frontend/src/app/components/pages/three-renderer/three-renderer.component.html
+++ b/frontend/src/app/components/pages/three-renderer/three-renderer.component.html
@@ -1,1 +1,9 @@
-<p>three-renderer works!</p>
+<div class="controls">
+    <button class="menu-button" (click)="changeTexture(0)">Café texturizado</button>
+    <button class="menu-button" (click)="changeTexture(1)">Cuerina</button>
+    <button class="menu-button" (click)="changeTexture(2)">Verde oscuro texturizado</button>
+    <button class="menu-button" (click)="changeTexture(3)">Rojo sangre</button>
+    <button class="menu-button" (click)="changeTexture(4)">Rojo sangre portada</button>
+    <button class="menu-button" (click)="addToCart()">Agregar al carrito</button>
+    <!-- Agrega más botones según el número de texturas -->
+  </div>
