--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -7,6 +7,9 @@
                     <a routerLink="/empastados-page">Crea tu Empastado</a>
                 </li>
                 <li *ngIf="isAuth">
+                    <a routerLink="/pedido">Pedido</a>
+                </li>
+                <li *ngIf="isAuth">
                     <a routerLink="/contact-page">Contacto</a>
                 </li>
                 <!-- *ngIf="!isAuth"-->
