--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -12,10 +12,12 @@
                 <!-- *ngIf="!isAuth"-->
                 <li *ngIf="!isAuth">
                     <a routerLink="/login">Iniciar Sesión</a>
-                </li>
-                <li *ngIf="isAdmin()">
-                    <a routerLink="/admin-page">Admin</a>
-                </li>
+                    <li *ngIf="isAdmin()" class ="menu-container">
+                        <a routerLink="/admin-page">Admin</a>
+                        <div class ="menu">
+                            <a routerLink="/ordenes-empastados-page">Ordenes Empastado</a>
+                        </div>
+                    </li>
                 <!-- *ngIf="isAuth" -->
                 <li *ngIf="isAuth"  class ="menu-container">
                     <a routerLink="/dashboard">{{user.name}}</a>
