Ordenes de empastado por persona

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -23,6 +23,7 @@
                     <a routerLink="/dashboard">{{user.name}}</a>
                     <div class ="menu">
                         <a routerLink="/order-person">Ordenes</a>
+                        <a routerLink="/ordenes-empastados-persona-page">Ordenes Empastado</a>
                         <a (click)="logout()">Cerrar Sesión</a>
                     </div>
                 </li>
