--- a/frontend/src/app/components/pages/ordenes-empastados-persona-page/ordenes-empastados-persona-page.component.html
+++ b/frontend/src/app/components/pages/ordenes-empastados-persona-page/ordenes-empastados-persona-page.component.html
@@ -1,5 +1,7 @@
 <div class="container">
     <h2>Mis empastados:</h2>
+    <h3>¡Recuerda que los empastados se pagan en el local!</h3>
+    <h4>Nota: Todo empastado está para el día siguiente tras pedirlo</h4>
     <ul>
       <li *ngFor="let documento of userDocuments">
         <p>Nombre del documento: {{ documento.fileName }}</p>
