--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -4,9 +4,11 @@
         <nav>
             <ul>
                 <li *ngIf="isAuth">
+                    <li *ngIf="!isAdmin()">
                     <a routerLink="/empastados-page">Crea tu Empastado</a>
                 </li>
                 <li *ngIf="isAuth">
+                    <li *ngIf="!isAdmin()">
                     <a routerLink="/contact-page">Contacto</a>
                 </li>
                 <!-- *ngIf="!isAuth"-->
@@ -28,6 +30,7 @@
                     </div>
                 </li>
                 <li *ngIf="isAuth">
+                    <li *ngIf="!isAdmin()">
                     <a routerLink="/cart-page">
                         Carrito <span *ngIf="cartQuantity">{{cartQuantity}}</span>
                     </a>
