--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -1,4 +1,4 @@
-ul{
+ul {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,7 +7,7 @@ ul{
     padding: 0;
 }
 
-li a{
+li a {
     height: 22.5rem;
     width: 20rem;
     border: 1px solid whitesmoke;
@@ -17,38 +17,45 @@ li a{
     flex-direction: column;
     overflow: hidden;
     color: #1E8449;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Agregar sombra a las cajas de productos */
 }
 
-li a:hover{
+li a:hover {
     opacity: 0.9;
     cursor: pointer;
 }
 
-li a img{
+li a img {
     object-fit: cover;
     height: 14.5rem;
 }
 
-.content{
+.content {
     margin-top: 0.3rem;
     padding: 0.5rem 1rem;
     position: relative;
     height: 7rem;
 }
 
-.product-item-footer{
+/* Agregar una línea verde de fondo al nombre de los productos */
+li a .content .name {
+    background: #4BDF8A; /* Ajusta el color según tus preferencias */
+    font-size: 1.2rem; /* Aumentar el tamaño del texto en los nombres de los productos */
+}
+
+.product-item-footer {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-.price{
+.price {
     position: absolute;
     bottom: 0;
     left: 0.9rem;
     background: white;
     padding: 0.3rem 100% 0 0;
-    color:black;
+    color: black;
     margin-top: 0.7rem;
     font-size: 1.1rem;
 }
