Arreglado el problema del Id en Registrar y en los pedidos

--- a/frontend/src/app/components/pages/contact-page/contact-page.component.html
+++ b/frontend/src/app/components/pages/contact-page/contact-page.component.html
@@ -28,7 +28,13 @@
                 <p>
                   <label for="nombre" class="colocar_nombre">Nombre
                   </label>
-                  <span>{{order.name}}</span>
+                  <span>{{currentUser.name}}</span>
+                </p>
+
+                <p>
+                  <label for="nombre" class="colocar_nombre">Correo
+                  </label>
+                  <span>{{currentUser.email}}</span>
                 </p>
               
             
